# Eidos

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CORE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  eidos.toml.example  install.sh  train_model.py
.github/workflows/: ci.yml
benches/: core_benchmark.rs
datasets/: example_commands.jsonl
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MODEL_GUIDE.md  PRODUCTION.md  REMEDIATION_PLAN.md  REMEDIATION_SUMMARY.md  SAFETY.md
examples/: basic_usage.rs
lib_bridge/: Cargo.toml
lib_bridge/src/: lib.rs
lib_chat/: Cargo.toml
lib_chat/src/: api.rs  error.rs  history.rs  lib.rs
lib_core/: Cargo.toml
lib_core/src/: alternatives.rs  lib.rs  quantized_llm.rs  tract_llm.rs  tract_llm_tests.rs  validation.rs
lib_core/tests/: command_validation_tests.rs
lib_qa/: Cargo.toml
lib_qa/src/: main.rs
lib_translate/: Cargo.toml
lib_translate/src/: detector.rs  error.rs  lib.rs  translator.rs
scripts/: README.md  convert_to_onnx.py  prune_dataset.py  train_model.py  validate_model.py
src/: config.rs  constants.rs  error.rs  main.rs  output.rs
tests/: integration_tests.rs
