[package]
name = "eidos"
version = "0.1.0"
edition = "2021"

[dependencies]
lib_bridge = { path = "lib_bridge" }
lib_chat = { path = "lib_chat" }
lib_core = { path = "lib_core" }
lib_translate = { path = "lib_translate" }

[patch.crates-io]
rand = { version = "0.9.0" }

[workspace]
resolver = "2"
members = [
	"lib_core",
	"lib_chat",
	"lib_translate",
	"lib_bridge",
]

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.61"
anyhow = "1.0.75"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
log = "0.4.21"
env_logger = "0.11.3"
candle-core = "0.6.0"
candle-transformers = "0.6.0"
tokenizers = "0.19.1"

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
