[package]
name = "eidos"
version = "0.2.0-beta"
edition = "2021"

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
log = { workspace = true }
env_logger = { workspace = true }
lazy_static = { workspace = true }
parking_lot = { workspace = true }
lib_bridge = { path = "lib_bridge" }
lib_chat = { path = "lib_chat" }
lib_core = { path = "lib_core" }
lib_translate = { path = "lib_translate" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.5"

[[bench]]
name = "core_benchmark"
harness = false

[workspace]
resolver = "2"
members = [
	"lib_core",
	"lib_chat",
	"lib_translate",
	"lib_bridge",
]

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.61"
anyhow = "1.0.75"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
log = "0.4.21"
env_logger = "0.11.3"
lazy_static = "1.5"
parking_lot = "0.12"
once_cell = "1.19"
candle-core = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = "0.20"

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
