[package]
name = "lib_core"
version = "0.0.0"
edition = "2025"

# authors = ["Kerem Yiğit <ru1vly@protonmail.com>"]
# license = "GPL-3.0 license"
# description = "Natural language processing and core library running system commands"
# repository = "https://github.com/Ru1vly/Eidos"

[dependencies]
thiserror = { workspace = true } # thiserror for CoreError enum in lib_core
candle-core = { workspace = true } # Includes model architectures and helpers such as Gemma
tokenizers = { workspace = true } # Tokenizer library Candle uses
serde = { workspace = true, features ["derive"], optional = true } # Local configuration files
serde_json = { workspace = true, optional = true }
log = { workspace = true, optional = true } # Detailed logging

# regex = { workspace = true, optional = true } ## for NLP, text processing and additional libraries.
