[package]
name = "lib_core"
version = "0.0.0"
edition = "2021"

# authors = ["Kerem Yiğit <ru1vly@protonmail.com>"]
# license = "GPL-3.0 license"
# description = "Natural language processing and core library running system commands"
# repository = "https://github.com/Ru1vly/Eidos"

[dependencies]
tract-onnx = "0.21"
tract-core = "0.21"
ndarray = "0.16"
thiserror = { workspace = true }
candle-core = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
log = { workspace = true, optional = true }
anyhow = { workspace = true }
